...
                    onClick = {
                      navigationActions.navigateTo(
                          Destinations.APPLICATION_MANAGEMENT.route + "/${assoId}")
                    }) {
                      Icon(imageVector = Icons.Default.Inbox, contentDescription = null)
                      Text(
                          "View Applications",
                          modifier = Modifier.padding(start = 12.dp),
                          fontSize = 18.sp)
                    }
              }
            }
      }
...
