...
                      modifier =
                          Modifier.fillMaxWidth()
                              .fillMaxHeight()
                              .padding(horizontal = 10.dp)
                              .padding(vertical = 7.dp)
                              .padding(start = 16.dp, end = 16.dp),
                      text = "No applicants",
                      textAlign = TextAlign.Center,
                      fontSize = 14.sp,
                      fontFamily = FontFamily(Font(R.font.sf_pro_display_regular)),
                      color = MaterialTheme.colorScheme.onBackground)
                }
              }
...
