...
                              Destinations.STAFF_MANAGEMENT.route + "/${eventId}")
                        }) {
                          Icon(
                              painter = painterResource(id = R.drawable.list_icon),
                              contentDescription = null)
                          Text(
                              "Staff List",
                              modifier = Modifier.padding(start = 12.dp),
                              fontSize = 18.sp)
                        }
                  }
                  Button(
                      modifier = Modifier.padding(12.dp).weight(1f).height(60.dp),
...
